--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -160,6 +160,18 @@
 
                    <md-card>
                        <md-card-content>
+                           <h2>Version 2.4.2.0</h2>
+                           <lu>
+                               <li>Added fix for UI not refreshing priorities for missions' rewards.</li>
+                               <li>Added currency tooltips.</li>
+                               <li>Added behavior enhancement: Don't start Garrison Resource missions if it will put the player over the cap</li>
+                               <li>Can use up to 5 Miner's Coffee</li>
+                               <li>Fixed bot getting stuck when there are more than 20 active followers</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+                   <md-card>
+                       <md-card-content>
                            <h2>Version 2.3.3.0</h2>
                            <lu>
                                <li>Added fix for UI not refreshing priorities for missions' rewards.</li>
@@ -278,10 +290,16 @@
 
         <tab heading="Work Orders">
             <div ng-controller=buildingsListController>
-                <md-button class="md-raised" ng-click='startAll(true)'>Start All</md-button>
-                <md-button class="md-raised" ng-click='collectAll(true)'>Collect All</md-button>
-                <md-button class="md-raised" ng-click='startAll(false)'>Start none</md-button>
-                <md-button class="md-raised" ng-click='collectAll(false)'>Collect none</md-button>
+                <div layout="column">
+                    <div layout="row">
+                        <md-button class="md-raised" ng-click='startAll(true)'>Start All</md-button>
+                        <md-button class="md-raised" ng-click='startAll(false)'>Start none</md-button>
+                    </div>
+                    <div layout="row">
+                        <md-button class="md-raised" ng-click='collectAll(true)'>Collect All</md-button>
+                        <md-button class="md-raised" ng-click='collectAll(false)'>Collect none</md-button>
+                    </div>
+                </div>
                 <h2>Building's Available</h2>
                 <md-content>
                     <md-list layout="row" layout-wrap>
@@ -693,8 +711,6 @@
         </tab>
 
     </tabset>
-
-    <div>{{lastError}}</div>
 </div>
 </body>
 </html>
