--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
-    <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
+    <script src="./Libraries/Angular/angular.min.js"></script>
+    <script src="./Libraries/Angular/angular-animate.min.js"></script>
+    <script src="./Libraries/Angular/angular-aria.min.js"></script>
+    <script src="./Libraries/Angular/angular-material.min.js"></script>
+    <script src="./Libraries/Angular/hammer.min.js"></script>
+    <script src="./Libraries/Angular/bootstrap.js"></script>
 
 
     <script src="./Libraries/SmartTable/smart-table.min.js"></script>
@@ -29,15 +29,10 @@
     <script src="./Modules/trading-post.module.js"></script>
     <script src="./Modules/missions-tab.module.js"></script>
 
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.css">
 
     <link rel="stylesheet" href="./Libraries/angular-xeditable/css/xeditable.css" />
     <link rel="stylesheet" href="./mainUI.css" />
 
-
-    <script type="text/javascript" src="http://static.wowhead.com/widgets/power.js"></script>
-    <script>var wowhead_tooltips = { "colorlinks": true, "iconizelinks": true, "renamelinks": true }</script>
 
 </head>
 <body>
@@ -158,6 +153,16 @@
                     </md-card>
 
 
+                   <md-card>
+                       <md-card-content>
+                           <h2>Version 2.4.9.0</h2>
+                           <lu>
+                               <li>Fix Barrack Level 3 when considering max active followers</li>
+                               <li>Added Currency and FollowerContract categories</li>
+                               <li>Added Legal information to product</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
                    <md-card>
                        <md-card-content>
                            <h2>Version 2.4.6.0</h2>
@@ -699,12 +704,12 @@
 
             <td>
             <div>
-                <p ng-if="row.isCategory"><b>Category</b> - {{row.rewardName}}</p>
-                <div ng-if="!row.isCategory">
-                    <a ng-if="canWowheadItem(row)" ng-href='http://www.wowhead.com/item={{ row.rewardId || "empty" }}' class="q2"></a>
-                    <a ng-if="canWowheadCurrency(row)" ng-href='http://www.wowhead.com/currency={{ row.rewardId || "empty" }}' class="icontiny q1"></a>
-                    <p ng-if="!canWowhead(row)">{{row.rewardName}}</p>
-                </div>
+                <p>{{row.rewardName}}</p>
+                <!--<p ng-if="row.isCategory"><b>Category</b> - {{row.rewardName}}</p>-->
+                <!--<div ng-if="!row.isCategory">-->
+                    <!--<a ng-if="canWowheadItem(row)" ng-href='http://www.wowhead.com/item={{ row.rewardId || "empty" }}' class="q2"></a>-->
+                    <!--<a ng-if="canWowheadCurrency(row)" ng-href='http://www.wowhead.com/currency={{ row.rewardId || "empty" }}' class="icontiny q1"></a>-->
+                <!--</div>-->
             </div>
             </td>
 
