--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,13 +155,20 @@
 
                    <md-card>
                        <md-card-content>
-                           <h2>Version 2.4.9.0</h2>
+                           <h2>Version 2.4.11.0</h2>
                            <lu>
-                               <li>Fix Barrack Level 3 when considering max active followers</li>
-                               <li>Added Currency and FollowerContract categories</li>
-                               <li>Added Legal information to product</li>
+                               <li>Removed tooltips and icons which were against BuddyStore rules.</li>
                            </lu>
                        </md-card-content>
+                   </md-card>
+                   <md-card-content>
+                       <h2>Version 2.4.9.0</h2>
+                       <lu>
+                           <li>Fix Barrack Level 3 when considering max active followers</li>
+                           <li>Added Currency and FollowerContract categories</li>
+                           <li>Added Legal information to product</li>
+                       </lu>
+                   </md-card-content>
                    </md-card>
                    <md-card>
                        <md-card-content>
@@ -587,7 +594,7 @@
                             </div>
                         </td>
                         <td>
-                            <a ng-href='http://www.wowhead.com/item={{ row.itemId || "empty" }}' class="q3"></a>
+                            {{row.itemName}}
                         </td>
                     </tr>
                     </tbody>
@@ -616,7 +623,7 @@
                             </div>
                         </td>
                         <td>
-                            <a ng-href='http://www.wowhead.com/item={{ row.itemId || "empty" }}' class="q3"></a>
+                            {{row.itemName}}
                         </td>
                     </tr>
                     </tbody>
