--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -154,7 +154,7 @@
 
                    <md-card>
                        <md-card-content>
-                           <h2>Version 2.4.19.0</h2>
+                           <h2>Version 2.4.20.0</h2>
                            <lu>
                                <li>Fixed profession items names not showing</li>
                            </lu>
@@ -171,7 +171,7 @@
                                <li>Removed deleting coffee & mining pick</li>
                                <li>Fixed bug ignoring user settings for starting work orders</li>
                                <li>Fixed bug not properly honoring Minimum Garrison Resources setting</li>
-                               <li>Removed settings related to Deleteing Coffee / Mining Picks</li>
+                               <li>Removed settings related to Deleting Coffee / Mining Picks</li>
                            </lu>
                        </md-card-content>
                    </md-card>
