--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -154,6 +154,17 @@
 
                    <md-card>
                        <md-card-content>
+                           <h2>Version 2.4.23.0</h2>
+                           <lu>
+                               <li>Added start all work orders button feature</li>
+                               <li>Added multiple fixes for work orders failing to start</li>
+                               <li>Added fix due to latest HB patches</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+                   <md-card>
+                       <md-card-content>
                            <h2>Version 2.4.20.0</h2>
                            <lu>
                                <li>Fixed profession items names not showing</li>
