--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -154,6 +154,24 @@
 
                    <md-card>
                        <md-card-content>
+                           <h2>Version 2.5.0.0</h2>
+                           <lu>
+                               <li>Added Use Weapon/Armor Enhancement Token: Will now use by default(no options) the Armor/Weapon Enhancement Token to create the uncommon, rare, or epic token.</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+                   <md-card>
+                       <md-card-content>
+                           <h2>Version 2.4.24.0</h2>
+                           <lu>
+                               <li>Added Fix for orders verification</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+                   <md-card>
+                       <md-card-content>
                            <h2>Version 2.4.23.0</h2>
                            <lu>
                                <li>Added start all work orders button feature</li>
