Pushed as beta 2.6.2.0

--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,6 +155,16 @@
 
                    <md-card>
                        <md-card-content>
+                           <h2>Version 2.6.2.0</h2>
+                           <lu>
+                               <li>Added Fix new NPC at trading post</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+
+                   <md-card>
+                       <md-card-content>
                            <h2>Version 2.6.1.0</h2>
                            <lu>
                                <li>Added disenchant feature, will now disenchant items if activated. (ICE only)</li>
