--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
+    <meta name="apple-mobile-web-app-State-bar-style" content="yes" />
 
     <script src="./Libraries/Angular/angular.min.js"></script>
     <script src="./Libraries/Angular/angular-animate.min.js"></script>
@@ -155,6 +155,16 @@
 
                 <md-card>
                     <md-card-content>
+                        <h2>Version 2.7.0.0</h2>
+                        <lu>
+                            <li>New internal engine to manage actions</li>
+                            <li>Added fix for new version of HB</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <md-card-content>
                         <h2>Version 2.6.4.0</h2>
                         <lu>
                             <li>Added Fix for UI completely messed up... ;)</li>
@@ -234,7 +244,7 @@
                         <h2>Version 2.4.19.0</h2>
                         <lu>
                             <li>Don't allow to send mail to self</li>
-                            <li>Fix status checking on missions for Lite version</li>
+                            <li>Fix State checking on missions for Lite version</li>
                             <li>Added alternative simulation for mission in case of error in main engine.</li>
                             <li>Removed deleting coffee & mining pick</li>
                             <li>Fixed bug ignoring user settings for starting work orders</li>
@@ -394,10 +404,10 @@
                                             </h3>
                                         </div>
                                     </div>
-                                    <accordion-group is-open="status.open">
+                                    <accordion-group is-open="State.open">
                                         <accordion-heading>
                                             More info
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': State.open, 'glyphicon-chevron-right': !State.open}"></i>
                                         </accordion-heading>
                                         <p>
                                             {{item.description}}
@@ -418,10 +428,10 @@
                                             </h3>
                                         </div>
                                     </div>
-                                    <accordion-group is-open="status.open">
+                                    <accordion-group is-open="State.open">
                                         <accordion-heading>
                                             More info
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': State.open, 'glyphicon-chevron-right': !State.open}"></i>
                                         </accordion-heading>
                                         <p>
                                             {{item.description}}
@@ -624,7 +634,7 @@
                             </span>
                         </td>
                         <td>
-                            <!-- editable status (select-local) -->
+                            <!-- editable State (select-local) -->
                             <span editable-select="row.condition" e-name="condition" e-form="rowform" onbeforesave="checkEmpty($data)" e-ng-options="s for s in conditions" e-required>
                               {{ row.condition }}
                             </span>
@@ -743,10 +753,10 @@
                         <td>
                             <div ng-controller="MissionOptionController" ng-init="init(row)">
                                 <accordion close-others="oneAtATime">
-                                    <accordion-group is-open="status.open">
+                                    <accordion-group is-open="State.open">
                                         <accordion-heading>
                                             {{ row.label }}
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': State.open, 'glyphicon-chevron-right': !State.open}"></i>
                                         </accordion-heading>
                                         <p>
                                             {{row.description}}
@@ -869,10 +879,10 @@
                                             </h3>
                                         </div>
                                     </div>
-                                    <accordion-group is-open="status.open">
+                                    <accordion-group is-open="State.open">
                                         <accordion-heading>
                                             More info
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': State.open, 'glyphicon-chevron-right': !State.open}"></i>
                                         </accordion-heading>
                                         <p>
                                             {{item.description}}
@@ -896,7 +906,7 @@
                 </div>
                 <div layout="row">
                     <h3 style="margin-left: 4px;">Maximum item quality to disenchant(won't disenchant above this quality): </h3>
-                    <!-- editable status (select-local) -->
+                    <!-- editable State (select-local) -->
                             <span style="color: black; margin-left: 13px;" editable-select="itemQuality" e-ng-options="s for s in itemQualities"  onaftersave="saveQuality()" e-required>
                               {{ itemQuality }} ( Click to edit)
                             </span>
