--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,6 +155,26 @@
 
                 <md-card>
                     <md-card-content>
+                        <h2>Version 2.7.2.0</h2>
+                        <lu>
+                            <li>All features are now back to normal.</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.1.0</h2>
+                        <lu>
+                            <li>Added fix for failed requirement for MoveTo</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+
+                <md-card>
+                    <md-card-content>
                         <h2>Version 2.7.0.0</h2>
                         <lu>
                             <li>New internal engine to manage actions</li>
