--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,6 +155,27 @@
 
                 <md-card>
                     <md-card-content>
+                        <h2>Version 2.7.6.0</h2>
+                        <lu>
+                            <li>Archeology fragment workaround should now be working properly.</li>
+                            <li>Mail recipient as current character should now be ignored properly.</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.4.0</h2>
+                        <lu>
+                            <li>Added fix cache not harvested properly.</li>
+                            <li>Added fix for mailing disenchantable to current character.</li>
+                            <li>Added fix for all mailing options to skip when mailing to current character, will now also take into account the format char@realm.</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <md-card-content>
                         <h2>Version 2.7.2.0</h2>
                         <lu>
                             <li>All features are now back to normal.</li>
