Added fix for crash when building's quest not completed for mine and herb garden Updated references to latest version

--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,6 +155,16 @@
 
                 <md-card>
                     <md-card-content>
+                        <h2>Version 2.7.8.0</h2>
+                        <lu>
+                            <li>Added fix for crash when mine/herb garden not available.</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+
+                <md-card>
+                    <md-card-content>
                         <h2>Version 2.7.7.0</h2>
                         <lu>
                             <li>Added fix for disenchant feature called when not activated in settings.</li>
