--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -155,7 +155,16 @@
 
                 <md-card>
                     <md-card-content>
-                        <h2>Version 2.7.8.0</h2>
+                        <h2>Version 2.7.10.0</h2>
+                        <lu>
+                            <li>Added fix for MoveToInteract requirement failing</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.9.0</h2>
                         <lu>
                             <li>Added fix for crash when mine/herb garden not available.</li>
                         </lu>
