--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -153,6 +153,27 @@
                     </md-card-content>
                 </md-card>
 
+            <md-card>
+                <md-card-content>
+                    <h2>Version 2.7.14.0</h2>
+                    <lu>
+                        <li>Added fix for mob not looted in mine and herb garden</li>
+                        <li>Added fix for coffe and pick not used until end of mine run since last update to core engine</li>
+                    </lu>
+                </md-card-content>
+            </md-card>
+
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.12.0</h2>
+                        <lu>
+                            <li>Added fix for most of "bot stopping with no reasons from time to time"</li>
+                            <li>Added fix for selling junk doing nothing</li>
+                            <li>Huge improvement in overall stability and debug outputs</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
                 <md-card>
                     <md-card-content>
                         <h2>Version 2.7.10.0</h2>
