Added fix for error about missing resources when opening settings (bat file)

--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -153,15 +153,24 @@
                     </md-card-content>
                 </md-card>
 
-            <md-card>
-                <md-card-content>
-                    <h2>Version 2.7.14.0</h2>
-                    <lu>
-                        <li>Added fix for mob not looted in mine and herb garden</li>
-                        <li>Added fix for coffe and pick not used until end of mine run since last update to core engine</li>
-                    </lu>
-                </md-card-content>
-            </md-card>
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.15.0</h2>
+                        <lu>
+                            <li>Added fix for error about missing resources when opening settings</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <md-card-content>
+                        <h2>Version 2.7.14.0</h2>
+                        <lu>
+                            <li>Added fix for mob not looted in mine and herb garden</li>
+                            <li>Added fix for coffe and pick not used until end of mine run since last update to core engine</li>
+                        </lu>
+                    </md-card-content>
+                </md-card>
 
                 <md-card>
                     <md-card-content>
